5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1871_1715.log
== TEST (2019-07-02 16:12:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in range(m):
	if(x=="N" and y=="N"):
		print("FOGO")
	else:
		print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in SIZE(m):
	if(x=="N" and y=="N"):
		print("FOGO")
	else:
		print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in size(m):
	if(x=="N" and y=="N"):
		print("FOGO")
	else:
		print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	if(x=="N" and y=="N"):
		print("FOGO")
	else:
		print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:14:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	if(x=="N" and y=="N"):
		print("FOGO")
	else:
		print("AGUA")
		
-- EXECUTION TIME:
1.08173
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
AGUA
AGUA
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
AGUA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	if(x=="N" and y=="N"):
		print("FOGO")
	else:
		print("AGUA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	if(m[x]=="N" and m[y]=="N"):
		print("FOGO")
	else:
		print("AGUA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		
		if(m[x]=="N" and m[y]=="N"):
			print("FOGO")
		else:
			print("AGUA")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		
		if([i,j]=='N'):
			print("FOGO")
		else:
			print("AGUA")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in range(m):
	for j in range(m):
		
		if([i,j]=='N'):
			print("FOGO")
		else:
			print("AGUA")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		
		if([i,j]=='N'):
			print("FOGO")
		else:
			print("AGUA")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		
		if([i,j]=='N'):
			print("FOGO")
			print (i)
		else:
			print("AGUA")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		
		if([i,j]=='N'):
			print("FOGO")
			print (i)
		else:
			print("AGUA")
			print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		if([x] == 'N' and [y] == 'N'):
			b = b +1
#		if([i,j]=='N'):
#			print("FOGO")
#			print (i)
		else:
			print("AGUA")
			print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		if([x,j] == 'N' and [i,y] == 'N'):
			b = b +1
#		if([i,j]=='N'):
#			print("FOGO")
#			print (i)
		else:
			print("AGUA")
			print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		if([x,y] == 'N' :
			b = b +1
#		if([i,j]=='N'):
#			print("FOGO")
#			print (i)
		else:
			print("AGUA")
			print(i)
-- ERROR:
File "XXXX", line 10
    if([x,y] == 'N' :
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		if([x,y] == 'N'):
			print("FOGO")
#			print (i)
		else:
			print("AGUA")
			print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

for i in shape(m):
	for j in shape(m):
		if([x,y] == 'N'):
			print("FOGO")
#			print (i)
		else:
			print("AGUA")
			print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] == 'N'):
	print("FOGO")
#			print (i)
else:
	print("AGUA")
			print(i
-- ERROR:
File "XXXX", line 13
    print(i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] == 'N'):
	print("FOGO")
#			print (i)
else:
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] == 'N'):
	print("FOGO")
#			print (i)
else:
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] != 'N'):
	print("AGUA")
#			print (i)
else:
	print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] != 'N'):
	print("AGUA")
#			print (i)
else:
	print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] != 'N'):
	print("AGUA")
#			print (i)
else:
	print("FOGO")
-- EXECUTION TIME:
0.890275
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
AGUA
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] != 'N'):
	print("AGUA")
#			print (i)
else:
	print("FOGO")
-- EXECUTION TIME:
2.3469
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
AGUA
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
x = int(input())
y = int(input())

if([x,y] != 'N'):
	print("AGUA")
#			print (i)
else:
	print("FOGO")
-- EXECUTION TIME:
2.7902
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:

-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
